# iLoveWord

./: .gitignore  LICENSE  README.md  custom_adb.py  main.py  ocr.py  pyproject.toml  requirements.txt  run.py  test.bat
src/iloveword/: core.py  ocr.py
